--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,6 @@ picture {
 body {
   box-sizing: border-box;
   font-family: "Libre Baskerville", serif;
-
 }
 
 /* ----- TYPOGRAPHY ----- */
@@ -101,18 +100,17 @@ a .source {
   font-weight: 700;
 }
 
-.main-container{
-max-width: 144rem;
-margin-inline: auto;
-
+.main-container {
+  max-width: 144rem;
+  margin-inline: auto;
 }
 
-.gallery{
+.gallery {
   margin: 4rem;
   columns: 4 auto;
   column-gap: 4rem;
   overflow: hidden;
-  padding-bottom:2rem ;
+  padding-bottom: 2rem;
 }
 
 .gallery-element {
@@ -120,7 +118,7 @@ margin-inline: auto;
   margin-bottom: 4rem;
 }
 
-.gallery-thumbnail{
+.gallery-thumbnail {
   width: 100%;
   height: 100%;
 }
@@ -132,17 +130,16 @@ margin-inline: auto;
   left: 0;
   height: 100%;
   width: 100%;
-  
-  background-image: linear-gradient(0deg, #000000 , #00000000 60%)
+
+  background-image: linear-gradient(0deg, #000000, #00000000 60%);
 }
 
-.thumbnail-links{
+.thumbnail-links {
   position: absolute;
-  bottom: 3.2rem ;
+  bottom: 3.2rem;
   padding-inline: 3.2rem;
-  
 }
-.thumbnail-links h2{ 
+.thumbnail-links h2 {
   margin-bottom: 0.7rem;
 }
 
@@ -185,5 +182,4 @@ button:focus-visible {
 
 .u-max-content-width {
   max-width: 143.9rem;
-
 }
